kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asset-monitoring-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: api.asset-monitoring-system.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
    - host: swagger.asset-monitoring-system.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swagger-ui
                port:
                  number: 8080
